k8s/gateway_api/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-route
  namespace: gateway-api
spec:
  parentRefs:
    - name: llm-platform-gateway
      namespace: gateway-api
  hostnames:
    - api.xikhub.store
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ollama
          namespace: inference
          port: 11435
---
# Grafana
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: gateway-api
spec:
  parentRefs:
    - name: llm-platform-gateway
      namespace: gateway-api
  hostnames:
    - grafana.xikhub.store
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-grafana
          namespace: monitoring
          port: 80
